--- a/templates/toolbar-header.html
+++ b/templates/toolbar-header.html
@@ -4,7 +4,7 @@
           <md-icon md-svg-icon="assets/images/icons/menu.svg"></md-icon>
         </md-button>
         <h1>
-          Contact List
+          Contact Details
         </h1>
       </div>
 </md-toolbar>
