--- a/templates/toolbar-header.html
+++ b/templates/toolbar-header.html
@@ -6,5 +6,9 @@
         <h1>
           Contact Details
         </h1>
+        <span flex></span>
+        <md-button ng-href="#/dashboard" class="md-icon-button">
+          <md-icon md-svg-icon="assets/images/icons/dashboard.svg"></md-icon>
+        </md-button>
       </div>
 </md-toolbar>
